Fix mobile scroll alignment

--- a/css/sass/styles.scss
+++ b/css/sass/styles.scss
@@ -85,7 +85,7 @@ h3 {
   }
 }
 .brand {
-  margin: 25px 0 0 13px;
+  margin: 25px 0 29px 13px;
   display: block;
   width: 110px;
 }
